--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "better-scroll": "^2.1.1",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "less": "^4.1.0",
+    "less-loader": "^7.3.0",
+    "loader": "^2.1.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
