--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
     "loader": "^2.1.1",
